# Enterprise-AI-Operations-Center

./: .env.example  .gitignore  README.md  pytest.ini
.github/workflows/: backend-ci.yml  ci-cd.yml  frontend-ci.yml
agents/: __init__.py  coder.py  orchestrator.py  planner.py  security_reviewer.py  tester.py
docs/: 01_PROJECT_CHARTER.md  02_PRD.md  03_BUSINESS_REQUIREMENTS.md  04_USER_PERSONAS.md  05_SYSTEM_CONTEXT.md  06_HLD.md  07_LLD.md  08_COMPONENT_DIAGRAMS.md  09_SEQUENCE_DIAGRAMS.md  10_DATABASE_DESIGN.md  11_DATA_DICTIONARY.md  12_VECTOR_STORE_DESIGN.md  13_API_SPECIFICATION.md  14_OPENAPI_SPEC.yaml  15_SECURITY_ARCHITECTURE.md  16_RBAC_DESIGN.md  17_THREAT_MODEL.md  18_CICD_DESIGN.md  19_INFRASTRUCTURE_AS_CODE.md  API_SPECIFICATION.md  DEPLOYMENT.md  trade-offs.md
frontend/: Dockerfile  package-lock.json
frontend/__tests__/: Card.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/agents/: page.tsx
frontend/app/components/: Button.tsx  Card.tsx  Sidebar.tsx  Topbar.tsx
frontend/app/edge/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/mlops/: page.tsx
frontend/app/multimodal/: page.tsx
frontend/app/voice/: page.tsx
infrastructure/docker/: docker-compose.yml  init-db.sh
infrastructure/kubernetes/: agents-deployment.yaml  api-deployment.yaml  vector-db-statefulset.yaml
infrastructure/monitoring/: prometheus.yml
infrastructure/monitoring/grafana/: dashboard.json
infrastructure/terraform/environments/dev/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/aws/: main.tf
infrastructure/terraform/modules/cache/: main.tf
infrastructure/terraform/modules/database/: main.tf
infrastructure/terraform/modules/eks/: main.tf
infrastructure/terraform/modules/storage/: main.tf
infrastructure/terraform/modules/vpc/: main.tf  outputs.tf
services/agent-engine/: Dockerfile  pyproject.toml
services/agent-engine/app/: __init__.py  engine.py  main.py
services/agent-engine/app/agents/: __init__.py  coder.py  orchestrator.py  planner.py  security_reviewer.py  state.py  tester.py
services/agent-engine/app/routes/: agents.py
services/agent-engine/tests/: test_agent_pipeline.py  test_engine.py
services/api-gateway/app/: main.py
services/api-gateway/app/middleware/: rbac_middleware.py
services/api-gateway/app/routes/: multimodal.py  rag.py  text.py  voice.py
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/app/: __init__.py  main.py  security.py
services/auth-service/app/routes/: auth.py
services/auth-service/tests/: test_auth.py
services/edge-manager/: Dockerfile  pyproject.toml
services/edge-manager/app/: __init__.py  main.py
services/edge-manager/app/benchmark/: latency_test.py
services/edge-manager/app/routes/: edge.py
services/edge-manager/app/services/: function_calling.py  quantization.py  runtime.py
services/mlops-service/: Dockerfile  pyproject.toml
services/mlops-service/app/: __init__.py  main.py
services/mlops-service/app/routes/: mlops.py
services/mlops-service/app/services/: audit_logger.py  conversation_logger.py  token_counter.py
services/multimodal-service/: Dockerfile  pyproject.toml
services/multimodal-service/app/: __init__.py  main.py
services/multimodal-service/app/routes/: analyze.py
services/multimodal-service/app/services/: citation_extractor.py  pdf_parser.py  router.py  vision_model.py
services/rag-service/: Dockerfile  pyproject.toml
services/rag-service/app/: __init__.py  main.py
services/rag-service/app/evaluation/: benchmark_plots.py  ragas_harness.py
services/rag-service/app/routes/: knowledge.py
services/rag-service/app/services/: vector_store.py
services/rag-service/app/services/chunking/: native.py  semantic.py
services/rbac-engine/: Dockerfile  pyproject.toml
services/rbac-engine/app/: __init__.py  main.py  metadata_filter.py  middleware.py  policy_engine.py
services/rbac-engine/app/routes/: roles.py
services/voice-service/: Dockerfile  pyproject.toml
services/voice-service/app/: __init__.py  main.py
services/voice-service/app/routes/: voice.py
services/voice-service/app/services/: entity_extractor.py  intent_classifier.py  state_machine.py  stt.py  tts.py
tests/e2e/: test_platform.py
tests/integration/: test_agent_rag.py  test_voice_pipeline.py
